--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -37,6 +37,7 @@ jobs:
   unit-tests:
     name: unit tests
     runs-on: ubuntu-latest
+    if: false # This will prevent the job from running
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ env.node }}
