--- a/.github/workflows/docsearch.yml
+++ b/.github/workflows/docsearch.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   index_docs:
     runs-on: ubuntu-latest
+    if: false # This will prevent the job from running
 
     steps:
       - name: Checkout code
