--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -55,6 +55,7 @@ jobs:
   e2e-tests:
     name: e2e tests
     runs-on: ubuntu-latest
+    if: false # This will prevent the job from running
     services:
       mariadb:
         image: bitnami/mariadb:10.3
