--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -40,10 +40,14 @@ jobs:
         npm install --os=linux --cpu=x64 sharp
     - name: Build
       run: npm run build
-    - name: publish
-      run: npm publish --access restricted
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Show list
+      run: ls -la
+    -name: Current directory
+      run: pwd
+    # - name: publish
+    #   run: npm publish --access restricted
+    #   env:
+    #     NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   unit-tests:
     name: unit tests
     runs-on: ubuntu-latest
