--- a/packages/email-plugin/package.json
+++ b/packages/email-plugin/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@vendure/email-plugin",
-    "version": "3.0.0",
+    "name": "@AnahitIM/email-plugin",
+    "version": "1.0.1",
     "license": "GPL-3.0-or-later",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -17,9 +17,6 @@
     },
     "homepage": "https://www.vendure.io/",
     "funding": "https://github.com/sponsors/michaelbromley",
-    "publishConfig": {
-        "access": "public"
-    },
     "dependencies": {
         "@types/nodemailer": "^6.4.9",
         "dateformat": "^3.0.3",
@@ -38,5 +35,13 @@
         "@vendure/core": "^3.0.0",
         "rimraf": "^5.0.5",
         "typescript": "5.3.3"
+    },
+    "publishConfig": {
+        "registry": "https://npm.pkg.github.com",
+        "access": "restricted"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/AnahitIM/vendure.git"
     }
 }
