--- a/packages/email-plugin/package.json
+++ b/packages/email-plugin/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@AnahitIM/email-plugin",
-    "version": "1.0.1",
+    "name": "@vendure/email-plugin",
+    "version": "3.0.0",
     "license": "GPL-3.0-or-later",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -35,13 +35,5 @@
         "@vendure/core": "^3.0.0",
         "rimraf": "^5.0.5",
         "typescript": "5.3.3"
-    },
-    "publishConfig": {
-        "registry": "https://npm.pkg.github.com",
-        "access": "restricted"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/AnahitIM/vendure.git"
     }
 }
