--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -35,7 +35,7 @@ jobs:
         registry-url: 'https://npm.pkg.github.com'
         scope: '@AnahitIM'
     - name: Install jq
-      run: apt-get install -y jq
+      run: sudo apt-get install -y jq
     - name: npm install
       run: |
         npm install
